[package]
name = "vel"
version = "0.0.1"
authors = ["Name <lasagna@garfunkles.space>"]
description = "A web templating library inspired by Svelte"
# license = "EUPL-1.2"
# repository = "https://git.garfunkles.space/vel"
# documentation = "https://docs.garfunkles.space/vel"
# homepage = "https://projects.garfunkles.space/vel"
keywords = ["template", "html", "handlebar", "svelte", "sveltejs", "sveltekit"]
categories = ["template-engine"]
include = ["/src/*", "/LICENSES/*", "/README.md"]
edition = "2021"
